# finkyo

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build-linux-aarch64.yml  build-linux-amd64.yml  build-linux.yml  build-macos-aarch64.yml  build-windows-amd64.yml  build-windows.yml  build.yml
.github/workflows  /: build.yml
src/: args.rs  handler.rs  main.rs  response.rs  routes.rs  state.rs
src/handler/: files.rs  web.rs
src/response/: files.rs
src/routes/: files.rs
src/services/: files_service.rs
src/utils/: image.rs
web/: .prettierrc  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/src/: App.tsx  index.tsx  routes.tsx
web/src/api/: files.ts
web/src/components/: BottomSheets.tsx  BreadcrumbNavigation.tsx  ContextMenu.tsx  EntryIcon.tsx  FileGrid.tsx  FileList.tsx  FileListItem.tsx  FileTable.tsx  Files.tsx  Home.tsx  ImageSwiper.tsx  MediaPlayer.tsx  VideoJs.tsx  VideoPlayer.tsx
web/src/hooks/: createPhotoSwipe.ts
web/src/lib/: fs.tsx  icons.tsx  isTouchDevice.ts  request.ts
web/src/store/: bottom_sheets.ts  context_menu.ts  layout.ts  saved_position.ts
web/src/types/: files.d.ts  files.ts  response.d.ts  saved_position.d.ts
web/src/typing/: files.ts
