[package]
name = "finkyo"
version = "0.3.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
clap = { version = "4.4.18", features = ["derive"] }
http-body = "1.0.0"
hyper = { version = "1.1.0", features = ["full"] }
image = "0.24.8"
local-ip-address = "0.6.1"
mime_guess = "2.0.4"
rust-embed = "8.2.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
