[package]
name = "finkyo"
version = "0.3.10"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
clap = { version = "4.5.16", features = ["derive"] }
http-body = "1.0.1"
hyper = { version = "1.4.0", features = ["full"] }
if-addrs = "0.13.2"
image = "0.25.2"
mime_guess = "2.0.5"
rust-embed = "8.5.0"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.15"
tokio = { version = "1.39.3", features = ["full"] }
tower = { version = "0.5.0", features = ["util"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
