[package]
name = "finkyo"
version = "0.3.10"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.4"
clap = { version = "4.5.38", features = ["derive"] }
http-body = "1.0.1"
hyper = { version = "1.6.0", features = ["full"] }
if-addrs = "0.13.4"
image = "0.25.6"
mime_guess = "2.0.5"
rust-embed = "8.7.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.4", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
